# VibeTO

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  package.json
.github/workflows/: release.yml
installer/: Cargo.toml  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
installer/assets/libs/: nuntaria.js
installer/capabilities/: default.json
installer/src/: deployer.rs  finder.rs  github.rs  lib.rs  main.rs  patcher.rs
installer/styles/: base.css  main.css  style.css  variables.css
installer/styles/default/: btn.css  layout.css  path.css
installer/styles/elements/: card.css  header.css  log.css  modal.css  status.css  titlebar.css
installer/ui/: renderer.ts
loader/: mod-loader.js  preload.js
original/: app-update.yml  tankionline.json
original/2.5.1/: main.js
original/2.5.1/content/: style.css
original/2.5.1/content/scripts/: preload.js  standalone.js  steam.js
scripts/: build-asar.js
