[package]
name = "vibeto-installer"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "VibeTOInstaller"
path = "src/main.rs"

[lib]
name = "vibeto_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5"
open = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
codegen-units = 4
lto = "thin"
strip = true
opt-level = "s"
